# unity-oxidizer

./: .gitignore  LICENSE  Oxidizer.asmdef  README.md
Assets/Oxidizer/Collections/: ArrayOxidizer.cs  ListOxidizer.cs  ListOxidizerEnumerator.cs
Assets/Oxidizer/Collections/RustyCollections/: RustyList.cs
Assets/Oxidizer/Collections/RustyCollections/Internal/: RustyListInternal.cs
Assets/Plugins/: .gitignore
Assets/Scenes/: SampleScene.unity  TestScene.unity
Assets/Scripts/: TestOxidizer.cs
Assets/Scripts/Oxidizer/Collections/: ArrayOxidizer.cs  ListOxidizer.cs  TreeOxidizer.cs
Assets/Scripts/Oxidizer/Collections/RustyCollections/: RustyArray.cs  RustyTree.cs  RustyTreeNode.cs
Assets/Scripts/Oxidizer/Extensions/: IntExtensions.cs
Collections/: ArrayOxidizer.cs  ListOxidizer.cs  OxidizedArray.cs
Collections/RustyCollections/: README.md  RustyArray.cs  RustyList.cs
Collections/RustyCollections/Internal/: RustyArrayInternal.cs
ProjectSettings/: ProjectSettings.asset
Rust/: .gitkeep
RustWorkspace/unity_oxidizer/: .gitignore  Cargo.toml  README.md
RustWorkspace/unity_oxidizer/src/: collections.rs
RustWorkspace/unity_oxidizer/src/collections/: rusty_array.rs  rusty_list.rs
RustWorkspace/unity_oxidizer_usage/: .gitignore  Cargo.toml  build_and_move.bat
RustWorkspace/unity_oxidizer_usage/src/: lib.rs
